// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test FillIntervalBlock should render correctly 1`] = `
<div>
  <div
    class="panel without-drag"
  >
    <span
      class="title"
    >
      Fill Interval
    </span>
    <div>
      MockUnitInput
      <p>
        min: 
        0.001
      </p>
      <p>
        max: 
        100
      </p>
      <p>
        unit: 
        mm
      </p>
      <p>
        defaultValue: 
        87
      </p>
      <p>
        decimal: 
        3
      </p>
      <p>
        displayMultiValue: 
        N
      </p>
      <input
        data-testid="fillInterval"
        id="fillInterval"
        type="number"
        value="87"
      />
    </div>
  </div>
</div>
`;

exports[`test FillIntervalBlock should render correctly when type is panel-item 1`] = `
<div>
  <div
    class="object-panel-item"
    id="fillInterval"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item"
        type="button"
      >
        <span>
          87
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Fill Interval
    </div>
  </div>
</div>
`;

exports[`test FillIntervalBlock should render correctly when unit is inch 1`] = `
<div>
  <div
    class="panel without-drag"
  >
    <span
      class="title"
    >
      Fill Interval
    </span>
    <div>
      MockUnitInput
      <p>
        min: 
        0.0254
      </p>
      <p>
        max: 
        100
      </p>
      <p>
        unit: 
        mm
      </p>
      <p>
        defaultValue: 
        87
      </p>
      <p>
        decimal: 
        3
      </p>
      <p>
        displayMultiValue: 
        N
      </p>
      <input
        data-testid="fillInterval"
        id="fillInterval"
        type="number"
        value="87"
      />
    </div>
  </div>
</div>
`;
